glitch effect fixed on mobile

--- a/Platform/src/styling/livestream.css
+++ b/Platform/src/styling/livestream.css
@@ -95,7 +95,6 @@ body {
 
 .glitch_title {
   line-height: 1;
-  display: inline-block;
   color: #fff;
   z-index: 2;
   letter-spacing: 2px;
